# MusicMapMaker-Next

./: AGENTS.md  CMakeLists.txt
3rdpty/sources/: CMakeLists.txt
3rdpty/sources/cmake/: concurrentqueue.cmake
Modules/: CMakeLists.txt
Modules/Audio/: CMakeLists.txt
Modules/Audio/include/audio/: AudioManager.h  SoundEffectPool.h
Modules/Audio/src/: AudioManager.cpp  SoundEffectPool.cpp
Modules/Config/: CMakeLists.txt
Modules/Config/include/config/: AppConfig.h  EditorConfig.h  EditorSettings.h  VisualConfig.h
Modules/Config/src/: AppConfig.cpp
Modules/Config/src/skin/: SkinLoader.cpp
Modules/Game/: CMakeLists.txt
Modules/Game/Canvas/: CMakeLists.txt
Modules/Game/Canvas/src/: Basic2DCanvas.cpp  Basic2DCanvas_Interaction.cpp  PreviewCanvas.cpp  TimelineCanvas.cpp
Modules/Game/Common/: CMakeLists.txt
Modules/Game/Graphic/src/: CursorManager.cpp
Modules/Game/Logic/: CMakeLists.txt
Modules/Game/UI/: CMakeLists.txt
Modules/Game/include/game/: GlobDefs.h
Modules/Game/src/: GameLoop.cpp
Modules/MMM/: CMakeLists.txt
Modules/MMM/include/mmm/: Metadata.h
Modules/MMM/src/beatmap/: BeatMap.cpp  LoadMMMMap.hpp  LoadMalodyMap.hpp  LoadOSUMap.hpp  LoadRMMap.hpp  SaveMMMMap.hpp  SaveMalodyMap.hpp  SaveOSUMap.hpp  (+1 more)
Modules/MMM/tests/: FormatTestHelpers.hpp  IMDConsistencyTest.cpp  MalodyConsistencyTest.cpp  OSUConsistencyTest.cpp
Modules/Main/: CMakeLists.txt
Modules/Main/src/: imgui_main_demo.cpp
assets/skins/mmm-nightly/: skin.lua
cmake/: project-configure.cmake
cmake/modules/: FindVulkan.cmake
scripts/: bulk_malody_test.py
(+150 files in other folders)
